# advectionHPCtester

./: .gitignore  CMakeLists.txt  README.md
advection/include/: mpdataoperators.inc
advection/src_algorithms/: antidiff3d-gauge-gpubc.f90  antidiff3d-standard-gpubc.f90  defines.inc  module_velprd.f90  mpdata3d-rho-gauge-gpubc.f90  mpdataop.f90  renames.inc  upwind3d-gpubc.f90  velprd_driver.f90
advection/src_drivers/: advec.f90  advec_init_finalize.f90  advec_init_interface_dp.f90  advec_init_interface_dpgpu.f90  advec_init_interface_sp.f90  advec_init_interface_spgpu.f90  advec_interface.f90  advec_interface_dp.f90  advec_interface_dpgpu.f90  advec_interface_sp.f90  advec_interface_spgpu.f90  advection_CEtimestep_twostep_GPUBC.f90  mpdataoperators.inc
advection/src_testapps/: advection_dwarf_test_minimal.f90  advection_dwarf_test_minimal_dp.f90  advection_dwarf_test_minimal_dpgpu.f90  advection_dwarf_test_minimal_sp.f90  advection_dwarf_test_minimal_spgpu.f90  advection_dwarf_test_modular.f90
advection/src_testdata/: advection_test_setup.f90
common/: bconditions.f90  diagnostics.f90  diagutils.f90  epsilons.f90  eulag_datafields_modular.f90  eulag_lib_parameters.f90  eulag_moist_datafields.f90  filters.f90  geometry.f90  geometry_datafields_modular.f90  mpi_parallel.f90  noise.f90  precisions.f90  scratch_datafields.f90  scratch_datafields_modular.f90
common/argsparser/: argsparser.f90
